experiement_output/error_log/nondex-amadornes-Artifactural.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task117/wd/NonDex-plugin-test/github.com/amadornes/Artifactural/src/gradlecomp/java/com/amadornes/artifactural/gradle/GradleRepositoryAdapter.java:45: error: GradleRepositoryAdapter is not abstract and does not override abstract method getDescriptor() in ResolutionAwareRepository
public class GradleRepositoryAdapter extends AbstractArtifactRepository implements ResolutionAwareRepository {
       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task117/wd/NonDex-plugin-test/github.com/amadornes/Artifactural/src/gradlecomp/java/com/amadornes/artifactural/gradle/GradleRepositoryAdapter.java:68: error: constructor AbstractArtifactRepository in class AbstractArtifactRepository cannot be applied to given types;
    private GradleRepositoryAdapter(DefaultMavenArtifactRepository maven, Repository repository) {
                                                                                                 ^
  required: ObjectFactory
  found: no arguments
  reason: actual and formal argument lists differ in length
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task117/wd/NonDex-plugin-test/github.com/amadornes/Artifactural/src/gradlecomp/java/com/amadornes/artifactural/gradle/ReflectionUtils.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileGradlecompJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 3s
